# amtrak-train-map

./: .gitignore  .prettierrc  README.md  RoutesList.v.json  Track Your Train Map Amtrak.html  route_properties.json  trainsDataBinary  trainsDataBinary.base64
Track Your Train Map Amtrak_files/: chatLoader.min.js  clientlib-base.a692b8af65cee48d7ead01427d64011f.css  clientlib-base.e87b239ce0585098ec879960f9b49e75.js  mp_linkcode.js  nextit-loader.js  polyfills.045528ccb883489aa163426df51d1221.js  runtime.68159a470c6eeae2d52ab96a127681eb.js  rwd__libs.bc97d93ccfc8cd6e1425e62236e71d89.css  scripts.79bd7f8abd92796b05a2df82a7a9bead.js
Track Your Train Map Amtrak_files/maps_data/: AS.js  Helper.js  PKs.js  js
Track Your Train Map Amtrak_files/nuanceChat_data/: cbc-min.js  nuanceChat.html  postToServer.html  site_10006734_default_jssdk.js  tcFramework_jssdk.min.js
amtrak-train-data-decrypter/: Cargo.toml  train_data.json
amtrak-train-data-decrypter-ts/: package-lock.json  package.json
amtrak-train-data-decrypter-ts/src/: crypto-thing.d.ts  main.ts
amtrak-train-data-decrypter/src/: main.rs
original-site/Track Your Train Map Amtrak_files/: clientlib-base.0db69e5cef42054ae7628afa05117dc2.css  clientlib-base.418f8b05197cefa9aa51bf8bbb37c3d7.js  embed.js  inqChatLaunch10006734.js  launch-EN2afa083a8c0444a3864ddbb48b27a9a7.min.js  maps.html  msal-browser.js  nextit-bundle.js  (+4 more)
sample-data/: RoutesList.json  RoutesList.json.11052022.json  RoutesList.v.json.11052022.json  decrypted_positions.json  route_properties.json
scripts/: archiver.sh  expander.js  fetch_script.sh
(+9 files in other folders)
