[package]
name = "amtrak-train-data-decrypter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
cbc = "0.1.2"
generic-array = "0.14.7"
hex-literal = "0.4.1"
pbkdf2 = "0.12.1"
sha1 = "0.10.5"
